# tasd-lib

./: .gitignore  Cargo.toml
tasd-lib/: Cargo.toml  foo.tasd
tasd-lib-macro/: Cargo.toml
tasd-lib-macro/src/: lib.rs
tasd-lib-traits/: Cargo.toml
tasd-lib-traits/src/: lib.rs
tasd-lib/assets/: sample.tasd
tasd-lib/src/: header.rs  lib.rs  macros.rs
tasd-lib/src/packets/: mod.rs
tasd-lib/src/packets/extra/: comment.rs  experimental.rs  mod.rs  unspecified.rs
tasd-lib/src/packets/general/: attribution.rs  blank_frames.rs  category.rs  console_region.rs  console_type.rs  dump_created.rs  dump_last_modified.rs  emulator_core.rs  emulator_name.rs  emulator_version.rs  game_identifier.rs  game_title.rs  memory_init.rs  mod.rs  movie_file.rs  movie_license.rs  port_controller.rs  port_overread.rs  rom_name.rs  source_link.rs  tas_last_modified.rs  total_frames.rs  total_rerecords.rs  unknown.rs  verified.rs
tasd-lib/src/packets/genesis/: game_genie.rs
tasd-lib/src/packets/input/: input_chunk.rs  input_moment.rs  lag_chunk.rs  mod.rs  movie_transition.rs  transition.rs
tasd-lib/src/packets/nes/: clock_filter.rs  game_genie.rs  latch_filter.rs  mod.rs
tasd-lib/src/packets/snes/: clock_filter.rs  game_genie.rs  latch_filter.rs  latch_train.rs  mod.rs
