[package]
name = "tasd-lib-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
nom = "7.1.3"
proc-macro2 = "1.0.68"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }
tasd-lib-traits = { path = "../tasd-lib-traits" }
[lib]
proc-macro = true
