[package]
name = "tasd-lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
tasd-lib-macro = { path = "../tasd-lib-macro" }
tasd-lib-traits = { path = "../tasd-lib-traits" }
num_enum = "0.7.0"
chrono = "0.4.31"
